# finance-agent

./: .gitignore  Dockerfile  README.md  ingest.py  main.py  pyproject.toml  requirements.txt
app/agent/: graph.py  grounding.py  nodes.py  prompting.py  state.py
app/api/v1/: endpoints.py
app/core/: config.py  logger.py
app/ingestion/: loader.py  splitter.py  vector_store.py
app/services/: llm_service.py  tools.py  vector_service.py
chroma_db/: chroma.sqlite3
