[project]
name = "finance-agent-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "gradio>=6.9.0",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.11",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.0",
    "sentence-transformers>=5.3.0",
    "tavily-python>=0.7.23",
    "uvicorn>=0.42.0",
]
